--- a/mobil.html
+++ b/mobil.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
 
   <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="manifest" href="manifest.json" />
   <title>Rental Mobil</title>
   <style>
     body {
@@ -561,6 +562,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"></script>
+     <script src="register.js"></script>
+  <script src="service-worker.js"></script>
 
 </body>
 
